Updated UI and fixed issues

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,6 +9,11 @@
             </ion-buttons>
         </ion-toolbar>
     </ion-header>
+    <ion-row>
+        <ion-col>
+            <app-message-banner></app-message-banner>
+        </ion-col>
+    </ion-row>
     <ion-content class="ion-padding home">
         <div class="ion-padding">
             <app-root-content
