--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -204,6 +204,7 @@ ion-accordion {
 
 .meal-class {
   height: 70vh;
+  padding-bottom: 1em;
 }
 
 .card-title {
@@ -231,7 +232,6 @@ ion-item.selected {
 }
 
 .meal-title {
-  font-size: 1.5em;
   font-weight: bold;
   margin-bottom: 10px;
 }
