--- a/src/app/components/log-food/log-food.component.html
+++ b/src/app/components/log-food/log-food.component.html
@@ -1,21 +1,27 @@
-<ion-content class="profile-content" style="color: #fff">
-    <div class="card">
-        <div class="card-header">
-            <ion-searchbar [debounce]="1000" (ionInput)="handleInput($event)"></ion-searchbar>
-        </div>
+<div class="card">
+  <div class="card-header">
+    <ion-searchbar
+      [debounce]="1000"
+      (ionInput)="handleInput($event)"
+    ></ion-searchbar>
+  </div>
 
-        <div class="food-list" *ngIf="showResults">
-            <div class="food-item" *ngFor="let result of results">
-                <div class="food-details">
-                    <div class="food-name">{{ result.name }}</div>
-                    <div class="nutrients">Calories: {{ result.calories }}, Fats: {{result.fat}}g, Carbs:
-                        {{result.carbohydrates}}g, Protein: {{result.protein}}g, Serving: {{result.serving}}</div>
-                </div>
-                <div class="button-wrapper">
-                    <button class="add-button" (click)="addFood(result)">{{ 'add' | translate }}</button>
-                    <span class="count">{{result.count}}</span>
-                </div>
-            </div>
+  <div class="food-list" *ngIf="showResults">
+    <div class="food-item" *ngFor="let result of results">
+      <div class="food-details">
+        <div class="food-name">{{ result.name }}</div>
+        <div class="nutrients">
+          Calories: {{ result.calories }}, Fats: {{ result.fat }}g, Carbs:
+          {{ result.carbohydrates }}g, Protein: {{ result.protein }}g, Serving:
+          {{ result.serving }}
         </div>
+      </div>
+      <div class="button-wrapper">
+        <button class="add-button" (click)="addFood(result)">
+          {{ "add" | translate }}
+        </button>
+        <span class="count">{{ result.count }}</span>
+      </div>
     </div>
-</ion-content>
+  </div>
+</div>
