--- a/src/app/components/nutrition-card/nutrition-card.component.html
+++ b/src/app/components/nutrition-card/nutrition-card.component.html
@@ -20,7 +20,7 @@
         </div>
         <div class="back-consumed" *ngIf="label === 'Water'">
           <span *ngIf="label === 'Water'">8L</span>
-          <div class="disableClass" style="display: flex; margin: 0.5em;">
+          <div style="display: flex; margin: 0.5em;">
             <ion-button size="small" color="success" (click)="adjustWater($event, true)">
               <ion-icon slot="icon-only" name="add-outline"></ion-icon>
             </ion-button>
