--- a/src/app/components/root/root.component.scss
+++ b/src/app/components/root/root.component.scss
@@ -48,6 +48,7 @@
             display: inline-flex;
             justify-content: space-around;
             margin-top: 15px;
+            margin-bottom: 1em;
         }
 
         .calories-info div {
@@ -57,6 +58,10 @@
         .calories-info .value {
             font-size: 1.2em;
             font-weight: bold;
+        }
+
+        .count-card {
+            margin-top: 2em;
         }
 
         /* Standard Card Styles */
@@ -113,9 +118,12 @@
 
         .card-title {
             font-size: 1.2em;
-            font-weight: bold;
+            font-weight: normal;
             margin-bottom: 5px;
-            margin-top: 0.5em;
+            border-top-left-radius: 1em;
+            border-top-right-radius: 1em;
+            background: #22222366;
+            padding: 0.2em;
         }
 
         .card-amount {
