--- a/src/styles.scss
+++ b/src/styles.scss
@@ -109,7 +109,7 @@ ion-icon {
   transition: transform 0.3s;
 }
 
-.swiper-container {
+.swiper-container-date {
   display: flex;
   align-items: center;
   padding: 5px 10px;
@@ -130,7 +130,7 @@ ion-icon {
 }
 
 .main-card .card-title {
-  font-size: 1.5em;
+  font-size: 13px;
   font-weight: bold;
 }
 
