--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -1,4 +1,4 @@
-<div class="swiper-container">
+<div class="swiper-container-date">
     <span class="swiper-btn" (click)="changeDate(-1)">&#10094;</span>
     <div class="date-display">
         <h2 id="date"></h2>
