--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -15,7 +15,7 @@
         </ion-col>
     </ion-row>
     <ion-content class="ion-padding home">
-        <div class="ion-padding">
+        <div class="ion-padding" style="padding-top: 0;">
             <app-root-content
                 *ngIf="tabActionService.showMainViewScreen && !tabActionService.showSelectFoodScreen"></app-root-content>
             <app-log-food
