--- a/src/app/components/log-food/log-food.component.scss
+++ b/src/app/components/log-food/log-food.component.scss
@@ -15,7 +15,7 @@
 
     .food-list {
         background: #ffffff;
-        height: 45vh;
+        height: 60vh;
         overflow: auto;
     }
 
@@ -23,7 +23,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 15px 10px;
+        padding: 5px 10px;
         border-bottom: 1px solid #e6e6e6;
     }
 
@@ -31,15 +31,34 @@
         border-bottom: none;
     }
 
+    .food-subtitle-cell {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 60px; /* Adjust height as needed */
+      }
+  
+
     .food-details {
         display: flex;
         flex-direction: column;
     }
 
     .food-name {
-        font-weight: bold;
-        font-size: 1.1em;
         color: #222;
+        margin-right: 1em;
+    }
+
+    tr:nth-child(even) {
+        background-color: #dddddd;
+    }
+
+    tr:nth-child(odd) {
+        background-color: #fdfafa;
+    }
+
+    .title {
+        font-weight: bold;
     }
 
     .nutrients {
