--- a/src/app/components/root/root.component.scss
+++ b/src/app/components/root/root.component.scss
@@ -117,7 +117,7 @@
         }
 
         .card-title {
-            font-size: 1.2em;
+            font-size: 13px;
             font-weight: normal;
             margin-bottom: 5px;
             border-top-left-radius: 1em;
