--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -131,83 +131,91 @@
       </ion-toolbar>
     </ion-header>
     <ion-content class="ion-padding profile-content">
-      <div class="card-title">{{ "recipies" | translate }}</div>
-      <div style="width: 100%; margin-top: 0.5em; margin-bottom: 2em">
-        <iframe id="youtubeIframe" style="width: inherit" height="315"
-          src="https://www.youtube.com/embed/playlist?list=PLZ1eGoTTiYT4glwkHHa7zGh4Ir2Pjr3Pm&feature=shared"
-          frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen>
-        </iframe>
-      </div>
-      <hr />
-      <div class="card-title">{{ "exercises" | translate }}</div>
-      <div style="width: 100%; margin-bottom: 2em">
-        <ion-accordion-group>
-          <ion-accordion value="second">
-            <ion-item slot="header" color="dark">
-              <ion-label>Day 1: Full Body Strength Training</ion-label>
-            </ion-item>
-            <div class="ion-padding" slot="content">
-              Focus on squats, push-ups, and glute bridges to build muscle and
-              burn fat.
-            </div>
-          </ion-accordion>
-          <ion-accordion value="third">
-            <ion-item slot="header" color="dark">
-              <ion-label>Day 2: Cardio + Core</ion-label>
-            </ion-item>
-            <div class="ion-padding" slot="content">
-              Go for a 20–30 minute cardio session followed by core exercises
-              like crunches and leg raises.
-            </div>
-          </ion-accordion>
-          <ion-accordion value="three">
-            <ion-item slot="header" color="dark">
-              <ion-label>Day 3: Lower Body Focus</ion-label>
-            </ion-item>
-            <div class="ion-padding" slot="content">
-              Target your legs with squats, lunges, and glute bridges to
-              strengthen and tone.
-            </div>
-          </ion-accordion>
-          <ion-accordion value="four">
-            <ion-item slot="header" color="dark">
-              <ion-label>Day 4: Cardio + Upper Body</ion-label>
-            </ion-item>
-            <div class="ion-padding" slot="content">
-              Do 20–30 minutes of HIIT cardio followed by push-ups and dumbbell
-              exercises for your upper body.
-            </div>
-          </ion-accordion>
-          <ion-accordion value="five">
-            <ion-item slot="header" color="dark">
-              <ion-label>Day 5: Active Recovery / Yoga</ion-label>
-            </ion-item>
-            <div class="ion-padding" slot="content">
-              Engage in yoga or a light walk to improve flexibility and promote
-              recovery.
-            </div>
-          </ion-accordion>
-          <ion-accordion value="six">
-            <ion-item slot="header" color="dark">
-              <ion-label>Day 6: Total Body Circuit</ion-label>
-            </ion-item>
-            <div class="ion-padding" slot="content">
-              Perform a full-body circuit with jump squats, burpees, and
-              mountain climbers.
-            </div>
-          </ion-accordion>
-          <ion-accordion value="seven">
-            <ion-item slot="header" color="dark">
-              <ion-label>Day 7: Cardio + Flexibility</ion-label>
-            </ion-item>
-            <div class="ion-padding" slot="content">
-              Finish the week with a moderate cardio session and focus on
-              full-body stretches.
-            </div>
-          </ion-accordion>
-        </ion-accordion-group>
-      </div>
+      <ion-segment (ionChange)="onDiscoverSegmentChange($event)" style="color: #fff;">
+        <ion-segment-button value="0">{{ "recipies" | translate }}</ion-segment-button>
+        <ion-segment-button value="1">{{ "exercises" | translate }}</ion-segment-button>
+      </ion-segment>
+
+      <ion-slides #discoverSlides [options]="discoverSlideOpts" (ionSlideDidChange)="onDiscoverSlideDidChange()">
+        <ion-slide [selected]="selectedDiscoverSegment">
+          <div style="width: 100%; margin-top: 0.5em; margin-bottom: 2em">
+            <iframe id="youtubeIframe" style="width: inherit" height="315"
+              src="https://www.youtube.com/embed/playlist?list=PLZ1eGoTTiYT4glwkHHa7zGh4Ir2Pjr3Pm&feature=shared"
+              frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen>
+            </iframe>
+          </div>
+        </ion-slide>
+        <ion-slide>
+          <div style="width: 100%; margin-bottom: 2em">
+            <ion-accordion-group>
+              <ion-accordion value="second">
+                <ion-item slot="header" color="dark">
+                  <ion-label>Day 1: Full Body Strength Training</ion-label>
+                </ion-item>
+                <div class="ion-padding exercise" slot="content">
+                  Focus on squats, push-ups, and glute bridges to build muscle and
+                  burn fat.
+                </div>
+              </ion-accordion>
+              <ion-accordion value="third">
+                <ion-item slot="header" color="dark">
+                  <ion-label>Day 2: Cardio + Core</ion-label>
+                </ion-item>
+                <div class="ion-padding  exercise" slot="content">
+                  Go for a 20–30 minute cardio session followed by core exercises
+                  like crunches and leg raises.
+                </div>
+              </ion-accordion>
+              <ion-accordion value="three">
+                <ion-item slot="header" color="dark">
+                  <ion-label>Day 3: Lower Body Focus</ion-label>
+                </ion-item>
+                <div class="ion-padding exercise" slot="content">
+                  Target your legs with squats, lunges, and glute bridges to
+                  strengthen and tone.
+                </div>
+              </ion-accordion>
+              <ion-accordion value="four">
+                <ion-item slot="header" color="dark">
+                  <ion-label>Day 4: Cardio + Upper Body</ion-label>
+                </ion-item>
+                <div class="ion-padding exercise" slot="content">
+                  Do 20–30 minutes of HIIT cardio followed by push-ups and dumbbell
+                  exercises for your upper body.
+                </div>
+              </ion-accordion>
+              <ion-accordion value="five">
+                <ion-item slot="header" color="dark">
+                  <ion-label>Day 5: Active Recovery / Yoga</ion-label>
+                </ion-item>
+                <div class="ion-padding exercise" slot="content">
+                  Engage in yoga or a light walk to improve flexibility and promote
+                  recovery.
+                </div>
+              </ion-accordion>
+              <ion-accordion value="six">
+                <ion-item slot="header" color="dark">
+                  <ion-label>Day 6: Total Body Circuit</ion-label>
+                </ion-item>
+                <div class="ion-padding exercise" slot="content">
+                  Perform a full-body circuit with jump squats, burpees, and
+                  mountain climbers.
+                </div>
+              </ion-accordion>
+              <ion-accordion value="seven">
+                <ion-item slot="header" color="dark">
+                  <ion-label>Day 7: Cardio + Flexibility</ion-label>
+                </ion-item>
+                <div class="ion-padding exercise" slot="content">
+                  Finish the week with a moderate cardio session and focus on
+                  full-body stretches.
+                </div>
+              </ion-accordion>
+            </ion-accordion-group>
+          </div>
+        </ion-slide>
+      </ion-slides>
     </ion-content>
   </ng-template>
 </ion-modal>
