--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -146,6 +146,7 @@ ion-item {
   --border-radius: 12px;
   --box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   margin-bottom: 10px;
+  font-size: 13px;
 }
 
 ion-item:hover {
@@ -198,6 +199,10 @@ ion-accordion {
 
 .ion-padding {
   color: white;
+}
+
+.exercise {
+  font-size: 13px;
 }
 
 .textareaClass {
