--- a/src/styles.scss
+++ b/src/styles.scss
@@ -135,7 +135,8 @@ ion-icon {
 }
 
 ion-modal {
-  --border-radius: 2.5em;
+  --border-top-left-radius: 2.5em;
+  --border-top-right-radius: 2.5em;
 }
 
 /* Main Footer Container */
