--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -32,7 +32,62 @@
   </div>
 </div>
 
-<ion-modal trigger="open-modal" (willDismiss)="onWillDismiss($event)" handleBehavior="cycle">
+<!-- Log Items modal -->
+<ion-modal trigger="open-modal" (willDismiss)="onWillDismiss($event)" [initialBreakpoint]="0.5"
+  [breakpoints]="[0, 0.25, 0.5, 0.75]" handleBehavior="cycle">
+  <ng-template>
+    <ion-header>
+      <ion-toolbar class="custom-toolbar">
+        <ion-buttons slot="start">
+          <ion-button class="cancel-button" (click)="cancel()">
+            <ion-icon class="cancel-button" (click)="cancel()" slot="icon-only" name="close-circle-outline"></ion-icon>
+          </ion-button>
+        </ion-buttons>
+        <ion-title class="modal-title">Log</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content class="ion-padding profile-content">
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <div style="display: flex; text-align: center; color: #fff;">
+              <div id="open-food-modal" (click)="openFoodLogModal()">
+                <div class="meal-icons">
+                  <span><ion-icon name="fast-food-outline"></ion-icon></span>
+                </div>
+                <span>Add Meal</span>
+              </div>
+              <div id="open-food-modal" (click)="openFoodLogModal()">
+                <div class="meal-icons">
+                  <span><ion-icon name="pencil-outline"></ion-icon></span>
+                </div>
+                <span>Update Meal</span>
+              </div>
+              <div class="disableClass">
+                <div class="meal-icons">
+                  <span><ion-icon name="water-outline"></ion-icon></span>
+                </div>
+                <span>Log Water</span>
+              </div>
+            </div>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <div style="display: flex; text-align: center; color: #fff;">
+            <div class="disableClass">
+              <div class="meal-icons">
+                <span><ion-icon name="barbell-outline"></ion-icon></span>
+              </div>
+              <span>Log Weight</span>
+            </div>
+          </div>
+        </ion-row>
+      </ion-grid>
+    </ion-content>
+  </ng-template>
+</ion-modal>
+
+<ion-modal [isOpen]="isFoodLogModalOpen" trigger="open-food-modal" (willDismiss)="onWillDismiss($event)" handleBehavior="cycle">
   <ng-template>
     <ion-header>
       <ion-toolbar class="custom-toolbar">
