--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -237,6 +237,19 @@ ion-item.selected {
   --color: white;
 }
 
+.foodCard {
+  margin: 0.5em;
+  width: 100%;
+  border-radius: 1em;
+}
+
+.food-card-header {
+}
+
+.food-card-title {
+  color: #fff;
+}
+
 .meal-icons {
   width: 2em; /* Set equal width and height */
   height: 2em;
