--- a/src/app/components/message-banner/message-banner.component.html
+++ b/src/app/components/message-banner/message-banner.component.html
@@ -1,5 +1,6 @@
 <ion-card *ngIf="tabActionService.showBannerMessage">
-  <ion-card-header>
+  <ion-card-header class="ion-header">
+    <ion-icon class="iconClass" name="heart"></ion-icon>
     <ion-card-title class="label mate">{{
       tabActionService.bannerMessage
     }}</ion-card-title>
