--- a/src/app/components/root/root.component.html
+++ b/src/app/components/root/root.component.html
@@ -38,7 +38,7 @@
       <div class="main-card nutrition-card">
         <div class="card-title">
           <span>
-            Weight
+            {{ "weight" | translate }}
           </span>
         </div>
         <div class="calories-info count-card">
