--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -245,7 +245,7 @@ ion-item.selected {
 
 .food-card-header {
   padding: 0.2em;
-  background: #243c3c;
+  background: #16443c;
 }
 
 .food-card-title {
